--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -9,8 +9,8 @@
 |:-:|-|-|-|
 |NUMBER [ (p [, s]) ]|占用空间长度 1 ~ 22 字节|p 的范围是 1 ~ 38，s 的范围是 -84 ~ 127，范围：1.0 x 10^-130 ~ 1.0 x 10^126(左闭右开)|当 p < s，是针对包含e标记的，当值超过p报错，超过s则四舍五入，INTEGER = NUMBER（38,0)|
 |FLOAT [(p)]|占用空间长度 1 ~ 22 字节|p的范围： 1 ~ 126 |是NUMBER的子类型|
-|BINARY_FLOAT| 4 字节|范围：1.17549E-38F ~  3.40282E+38F|32位单精度浮点型，特殊值：INF and NaN|
-|BINARY_DOUBLE| 8 字节|范围：2.22507485850720E-308  ~ 1.79769313486231E+308|64位双精度浮点型，特殊值：INF and NaN|
+|BINARY_FLOAT| 4 字节|范围：1.17549E-38F ~  3.40282E+38F|32位单精度浮点型，特殊值：INF、-INF and NaN|
+|BINARY_DOUBLE| 8 字节|范围：2.22507485850720E-308  ~ 1.79769313486231E+308|64位双精度浮点型，特殊值：INF、-INF and NaN|
 
 **2. MySQL数值类型**
 + M 表示整型的最大显示宽度，其中允许的最大显示宽度是255.对 floating-point 和 fixed-point 类型, M 是可以存储的总数字.
@@ -43,7 +43,6 @@
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
 |...|...|...|
-
-
-
+|BINARY_FLOAT|启用REAL_AS_FLOAT的SQL mode |FLOAT[(M,D)] 或 REAL[(M,D)] |
+|BINARY_DOUBLE|不启用REAL_AS_FLOAT的SQL mode|DOUBLE[(M,D)] 或 DOUBLE PRECISION[(M,D)] 或 REAL[(M,D)]|
 
