--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -43,6 +43,13 @@
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
 |...|...|...|
+|NUMBER|...|...|
+|NUMBER(p)|...|...|
+|NUMBER(p,s),p > s,s > 0|...|...|
+|NUMBER(p,s),p > s,s < 0|...|...|
+|NUMBER(p,s),p < s|...|...|
+|FLOAT|...|...|
+|FLOAT(p)|...|...|
 |BINARY_FLOAT|启用REAL_AS_FLOAT的SQL mode |FLOAT[(M,D)] 或 REAL[(M,D)] |
 |BINARY_DOUBLE|不启用REAL_AS_FLOAT的SQL mode|DOUBLE[(M,D)] 或 DOUBLE PRECISION[(M,D)] 或 REAL[(M,D)]|
 
