--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -42,8 +42,8 @@
 
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
-|NUMBER,NUMBER(\*)|...|...|
-|NUMBER(p)|...|...|
+|NUMBER\|NUMBER(\*)|...|...|
+|NUMBER(p)\|NUMBER(p,0)|...|...|
 |NUMBER(p,s),p > s,s > 0|...|...|
 |NUMBER(p,s),p > s,s < 0|...|...|
 |NUMBER(p,s),p < s|...|...|
