--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -43,7 +43,7 @@
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
 |NUMBER\|NUMBER(\*)|...|...|
-|NUMBER(p)\|NUMBER(p,0)|1 < p <= 3，TINYINT,DECIMAL(p),DECIMAL(p,0);|...|
+|NUMBER(p)\|NUMBER(p,0)|1 < p <= 3，TINYINT;|DECIMAL(p) 或者 DECIMAL(p,0)|
 |NUMBER(p,s),p > s,s > 0|...|...|
 |NUMBER(p,s),p > s,s < 0|...|...|
 |NUMBER(p,s),p < s|...|...|
