--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -43,7 +43,7 @@
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
 |NUMBER\|NUMBER(\*)|...|...|
-|NUMBER(p)\|NUMBER(p,0)|1 < p <= 3,TINYINT;|DECIMAL(p) 或者 DECIMAL(p,0)|
+|NUMBER(p)\|NUMBER(p,0)|1 <= p < 3  TINYINT;\n3 <= p < 5  SMALLINT;5 <= p < 7 MEDIUMINT;7 <= p < 10   INT;10 <= 0 < 19    BIGINT;19 <= p <= 38    DECIAML(p)|DECIMAL(p) 或者 DECIMAL(p,0)|
 |NUMBER(p,s),p > s,s > 0|...|...|
 |NUMBER(p,s),p > s,s < 0|...|...|
 |NUMBER(p,s),p < s|...|...|
