--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -43,6 +43,7 @@
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
 |NUMBER\|NUMBER(\*)|...|...|
+|NUMBER(\*,0)|\*默认是38，Oracle并非是在38位有效数值后溢出，而溢出值上限位40位有效数字|DECIMAL(40,0)|
 |NUMBER(p)\|NUMBER(p,0)|1 <= p < 3  &nbsp;&nbsp;TINYINT;</br>3 <= p < 5  &nbsp;&nbsp;SMALLINT;</br>5 <= p < 7 &nbsp;&nbsp;MEDIUMINT;</br>7 <= p < 10   &nbsp;&nbsp;INT;</br>10 <= 0 < 19    &nbsp;&nbsp;BIGINT;</br>19 <= p <= 38    &nbsp;&nbsp;DECIAML(p)|DECIMAL(p) 或者 DECIMAL(p,0)|
 |NUMBER(p,s),p > s,s > 0|...|...|
 |NUMBER(p,s),p > s,s < 0|...|...|
