--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -40,6 +40,10 @@
 
 **3. 转换规则**
 
+**注意：**
++ NUMBER整数部分允许的长度为（precision- scale），无论scale是正数还是负数。
++ 如果precision小于scale，表示存储的是没有整数的小数。
+
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
 |NUMBER\|NUMBER(\*)|1 <= p <= 38, 0 <= s <= 30 &nbsp;DECIMAL(p,s);</br>1 <= p <= 38,-84 <= s < 0 or 30 <= s <= 127 &nbsp;DOUBLE|待重新处理|
