--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -42,7 +42,9 @@
 
 **注意：**
 + NUMBER整数部分允许的长度为（precision- scale），无论scale是正数还是负数。
-+ 如果precision小于scale，表示存储的是没有整数的小数。
++ 如果precision小于scale，表示存储的是没有整数的小数，数字是绝对值小于1的数字，且从小数点右边开始的前s-p位必须是0，保留s位小数。
++ number(p,s),s小于0，表示有效位最大为p+|s|，没有小数位，小数点左边s位置开始四舍五入，小数点左侧s位，每一位均为0，s负数，小数点左边指定位置开始四舍五入。
+
 
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
