--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -48,7 +48,7 @@
 
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
-|NUMBER\|NUMBER(\*)|1 <= p <= 38, 0 <= s <= 30 &nbsp;DECIMAL(p,s);</br>1 <= p <= 38,30 <= s <= 127</br>1 <= p <= 38,-84 <= s < 0|...|
+|NUMBER\|NUMBER(\*)|1 <= p <= 38, 0 <= s <= 30 &nbsp;DECIMAL(p,s);</br>1 <= p <= 38,30 <= s <= 127</br>1 <= p <= 38,-84 <= s < 0|DECIMAL(40,30)|
 |NUMBER(\*,0)|\*默认是38，Oracle并非是在38位有效数值后溢出，而溢出值上限位40位有效数字|DECIMAL(40,0)|
 |NUMBER(p)\|NUMBER(p,0)|1 <= p < 3  &nbsp;&nbsp;TINYINT;</br>3 <= p < 5  &nbsp;&nbsp;SMALLINT;</br>5 <= p < 7 &nbsp;&nbsp;MEDIUMINT;</br>7 <= p < 10   &nbsp;&nbsp;INT;</br>10 <= 0 < 19    &nbsp;&nbsp;BIGINT;</br>19 <= p <= 38    &nbsp;&nbsp;DECIAML(p)|DECIMAL(p) 或者 DECIMAL(p,0)|
 |NUMBER(p,s),p > s,s > 0|1 <= p <= 38, 0 <= s <= 30  &nbsp;&nbsp;DECIMAL(p,s);</br> 1 <= p <= 38, 30 <= s <= 127  &nbsp;&nbsp;VARCHAR(p)|DECIMAL(p,s) 或者 VARCHAR(p)|
