--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -59,3 +59,10 @@
 |BINARY_FLOAT|启用REAL_AS_FLOAT的SQL mode |FLOAT[(M,D)] 或 REAL[(M,D)] |
 |BINARY_DOUBLE|不启用REAL_AS_FLOAT的SQL mode|DOUBLE[(M,D)] 或 DOUBLE PRECISION[(M,D)] 或 REAL[(M,D)]|
 
+
+**其他兼容数值类型**
+
++ REAL = FLOAT(63)
++ DOUBLE PRECISION = FLOAT(126) 
++ INTEGER / INT /SMALLINT  = NUMBER(38) 
++ DECIMAL(p,s) / DEC(p,s) / NUMERIC(p,s) = NUMBER(p,s) 如果p未指定，则默认为38
