--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -66,3 +66,24 @@
 + DOUBLE PRECISION = FLOAT(126) 
 + INTEGER / INT /SMALLINT  = NUMBER(38) 
 + DECIMAL(p,s) / DEC(p,s) / NUMERIC(p,s) = NUMBER(p,s) 如果p未指定，则默认为38
+
++ **P(decimal) = int(0.30103 * P(binary))，最大整数位务必小于 (2^p -1)**
+
+案例：
+```
+CREATE TABLE test (col1 NUMBER(5,2), col2 FLOAT(5));
+
+INSERT INTO test VALUES (1.23, 1.23);
+INSERT INTO test VALUES (7.89, 7.89);
+INSERT INTO test VALUES (12.79, 12.79);
+INSERT INTO test VALUES (123.45, 123.45);
+
+SELECT * FROM test;
+
+      COL1       COL2
+---------- ----------
+      1.23        1.2
+      7.89        7.9
+     12.79         13
+    123.45        120
+```
