--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -55,7 +55,7 @@
 |NUMBER(p,s),p > s,s < 0|s<0在MySQL是不允许存在的|DECIMAL(p+\|s\|,0)|
 |NUMBER(p,s),p < s|1 <= p <= 38, 0 <= \|s\| <= 30  &nbsp;&nbsp;DECIMAL(p,s);</br> 1 <= p <= 38, 30 <= \|s\| <= 127  &nbsp;&nbsp;VARCHAR(p)|DECIMAL(p,s) 或者 VARCHAR(p)|
 |FLOAT=FLOAT(126)|...|DOUBLE|
-|FLOAT(p)|0 <= p <= 24 &nbsp;&nbsp;FLOAT</br>25 <= p <= 53 &nbsp;&nbsp;DOUBLE|FLOAT 或 D|
+|FLOAT(p)|0 <= p <= 24 &nbsp;&nbsp;FLOAT</br>25 <= p <= 53 &nbsp;&nbsp;DOUBLE</br> MySQL中p最大值只能是53 |FLOAT 或 DOUBLE|
 |BINARY_FLOAT|启用REAL_AS_FLOAT的SQL mode |FLOAT[(M,D)] 或 REAL[(M,D)] |
 |BINARY_DOUBLE|不启用REAL_AS_FLOAT的SQL mode|DOUBLE[(M,D)] 或 DOUBLE PRECISION[(M,D)] 或 REAL[(M,D)]|
 
