--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -87,3 +87,10 @@ SELECT * FROM test;
      12.79         13
     123.45        120
 ```
+
+**4. 参考链接**
+1. http://blog.itpub.net/4227/viewspace-265079/
+2. http://blog.itpub.net/4227/viewspace-265223/
+3. https://blog.csdn.net/yzj_000/article/details/2962092
+4. http://www.blogjava.net/caojianhua/archive/2011/01/24/343461.html
+5. https://blog.csdn.net/yzsind/article/details/7948226
