--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -5,4 +5,4 @@
 
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
-|DATE|7字节|January 1, 4712 BC ~  December 31, 9999 AD|受参数 NLS_DATE_FORMAT 明确表示，参数 NLS_TERRITORY 隐含表示|
+|DATE|7字节|January 1, 4712 BC ~  December 31, 9999 AD|受参数 NLS_DATE_FORMAT 明确表示，参数 NLS_TERRITORY 隐含表示。数据类型包含的日期字段：YEAR, MONTH, DAY, HOUR, MINUTE, 和 SECOND. 没有 fractional seconds 或者 时区|
