--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -9,6 +9,6 @@
 |DATE|占用大小为：7字节|January 1, 4712 BC ~  December 31, 9999 AD|数据类型包含的日期字段：YEAR, MONTH, DAY, HOUR, MINUTE, 和 SECOND. 没有 fractional seconds 或者 时区|
 |TIMESTAMP [(fractional_seconds_precision)]|占用大小为：7字节 或者 11 字节，取决于 precision值|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|数据类型包含的日期字段：YEAR, MONTH, DAY, HOUR, MINUTE, 和 SECOND. 包含fractional seconds 但是没有 时区|
 |TIMESTAMP [(fractional_seconds_precision)] WITH TIME ZONE|占用大小为：13 字节|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|数据类型包含的日期字段：YEAR, MONTH, DAY, HOUR, MINUTE, SECOND, TIMEZONE_HOUR, 和 TIMEZONE_MINUTE. 包含 fractional seconds 和 明确时区|
-|TIMESTAMP [(fractional_seconds_precision)] WITH LOCAL TIME ZONE|占用大小为： 7字节 或者 11 字节，取决于 precision值|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|...|
-
-
+|TIMESTAMP [(fractional_seconds_precision)] WITH LOCAL TIME ZONE|占用大小为： 7字节 或者 11 字节，取决于 precision值|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|对时区信息敏感|
+|INTERVAL YEAR [(year_precision)] TO MONTH|占用大小是：固定 5字节|year_precision 是 YEAR的位数，可接受的值是 0 ~ 9，默认值是 2|...|
+|INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]|占用大小：固定 11字节|day_precision 是 DAY的最大数值位，可接受的值是 0 ~ 9，默认值是 2;fractional_seconds_precision 是 SECOND 的位数，可接受的值是 0 ~ 9，默认值是 6|...|
