--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -10,5 +10,23 @@
 |TIMESTAMP [(fractional_seconds_precision)]|占用大小为：7字节 或者 11 字节，取决于 precision值|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|数据类型包含的日期字段：YEAR, MONTH, DAY, HOUR, MINUTE, 和 SECOND. 包含fractional seconds 但是没有 时区|
 |TIMESTAMP [(fractional_seconds_precision)] WITH TIME ZONE|占用大小为：13 字节|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|数据类型包含的日期字段：YEAR, MONTH, DAY, HOUR, MINUTE, SECOND, TIMEZONE_HOUR, 和 TIMEZONE_MINUTE. 包含 fractional seconds 和 明确时区|
 |TIMESTAMP [(fractional_seconds_precision)] WITH LOCAL TIME ZONE|占用大小为： 7字节 或者 11 字节，取决于 precision值|可接受的 fractional_seconds_precision 值 0 ~ 9，默认是 6. 指的是 SECOND 的位数|对时区信息敏感|
-|INTERVAL YEAR [(year_precision)] TO MONTH|占用大小是：固定 5字节|year_precision 是 YEAR的位数，可接受的值是 0 ~ 9，默认值是 2|...|
-|INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]|占用大小：固定 11字节|day_precision 是 DAY的最大数值位，可接受的值是 0 ~ 9，默认值是 2;fractional_seconds_precision 是 SECOND 的位数，可接受的值是 0 ~ 9，默认值是 6|...|
+|INTERVAL YEAR [(year_precision)] TO MONTH|占用大小是：固定 5字节|year_precision 是 YEAR的位数，可接受的值是 0 ~ 9，默认值是 2|获取数据：EXTRACT(YEAR|MONTH FROM YEAR TO MONTH)|
+|INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]|占用大小：固定 11字节|day_precision 是 DAY的最大数值位，可接受的值是 0 ~ 9，默认值是 2;fractional_seconds_precision 是 SECOND 的位数，可接受的值是 0 ~ 9，默认值是 6|EXTRACT(DAY|HOUR|MINUTE|SECOND FROM DAY TO SECOND)|
+
+```
+SQL> select DBTIMEZONE from dual;   -- 查看数据库时区
+
+DBTIME
+------
++00:00
+
+SQL> select SESSIONTIMEZONE from dual; -- 查看会话时区
+
+SESSIONTIMEZONE
+---------------------------------------------------------------------------
++08:00
+
+SQL> 
+
+都没有设置，则默认使用 操作系统时区，如果OS时区不是Oracle有效的时区，则使用 UTC 作为默认值.
+```
