--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -30,3 +30,22 @@ SQL>
 
 都没有设置，则默认使用 操作系统时区，如果OS时区不是Oracle有效的时区，则使用 UTC 作为默认值.
 ```
+
+**日期字段有效值**
+
+|datetime字段|datetime有效值|interval有效值|
+|:-:|-|-|
+|YEAR|-4712 ~ 9999 (排除 year 0)|任何正整数或者负整数|
+|MONTH|01 ~ 12|0 ~ 11|
+|DAY|01 ~ 31（受MONTH 和 YEAR的值的限制，依据当前NLS calendar的参数值）|任何正整数或者负整数|
+|HOUR|00 ~ 23|0 ~ 23| 
+|MINUTE|00 ~ 59|0 ~ 59|
+|SECOND|0 ~ 59.9(n), 这里 9(n) 是 time fractional seconds 的precision,9(n)部分不适用DATE|0 ~ 59.9(n), 这里 9(n) 是 interval fractional seconds 的precision|
+|TIMEZONE_HOUR|...|不适用|
+|TIMEZONE_MINUTE|...|不适用|
+|TIMEZONE_REGION|...|不适用|
+|TIMEZONE_ABBR|...|不适用|
+
+
+
+
