--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -41,10 +41,10 @@ SQL>
 |HOUR|00 ~ 23|0 ~ 23| 
 |MINUTE|00 ~ 59|0 ~ 59|
 |SECOND|0 ~ 59.9(n), 这里 9(n) 是 time fractional seconds 的precision,9(n)部分不适用DATE|0 ~ 59.9(n), 这里 9(n) 是 interval fractional seconds 的precision|
-|TIMEZONE_HOUR|...|不适用|
-|TIMEZONE_MINUTE|...|不适用|
-|TIMEZONE_REGION|...|不适用|
-|TIMEZONE_ABBR|...|不适用|
+|TIMEZONE_HOUR|-12 ~ 14（此范围适用于夏令时的更改），不适用于DATE 或者 TIMESTAMP|不适用|
+|TIMEZONE_MINUTE|00 ~ 59，不适用于DATE 或者 TIMESTAMP|不适用|
+|TIMEZONE_REGION|V$TIMEZONE_NAMES.TZNAME 不适用于DATE 或者 TIMESTAMP|不适用|
+|TIMEZONE_ABBR|V$TIMEZONE_NAMES.TZABBREV 不适用于DATE 或者 TIMESTAMP|不适用|
 
 
 
