--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -2,6 +2,9 @@
 ---
 
 ### 一、日期类型(Date Types)对比
+
+**1.Oracle日期类型**
+
 目前包含的日期类型为：date、tiemstamp、interval类型，受参数 NLS_DATE_FORMAT 明确表示，参数 NLS_TERRITORY 隐含表示。
 
 |数据类型|存储空间|范围|说明|
@@ -47,5 +50,9 @@ SQL>
 |TIMEZONE_ABBR|V$TIMEZONE_NAMES.TZABBREV 不适用于DATE 或者 TIMESTAMP|不适用|
 
 
+**2.MySQL日期类型**
+
+
+**3.转换规则**
 
 
