--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -52,6 +52,14 @@ SQL>
 
 **2.MySQL日期类型**
 
+|数据类型|存储空间|范围|说明|
+|:-:|-|-|-|
+|DATE|...|...|...|
+|TIME[(fsp)]|...|...|...|
+|DATETIME[(fsp)]|...|...|...|
+|TIMESTAMP[(fsp)]|...|...|...|
+|YEAR[(2|4)]|...|...|...|
+
 
 **3.转换规则**
 
