--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -54,11 +54,11 @@ SQL>
 
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
-|DATE|...|...|...|
-|TIME[(fsp)]|...|...|...|
-|DATETIME[(fsp)]|...|...|...|
-|TIMESTAMP[(fsp)]|...|...|...|
-|YEAR[(2|4)]|...|...|...|
+|DATE|3字节|...|...|
+|TIME[(fsp)]|3字节（< MySQL 5.6.4） 或者 3 字节 + fractional seconds storage（>= MySQL 5.6.4）|...|...|
+|DATETIME[(fsp)]|8字节（< MySQL 5.6.4） 或者 5 字节 + fractional seconds storage （>= MySQL 5.6.4） |...|...|
+|TIMESTAMP[(fsp)]|4字节（< MySQL 5.6.4） 或者 4 字节 + fractional seconds storage（>= MySQL 5.6.4）|...|...|
+|YEAR[(2\|4)]|1字节|...|...|
 
 
 **3.转换规则**
