--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -60,6 +60,15 @@ SQL>
 |TIMESTAMP[(fsp)]|4字节（< MySQL 5.6.4） 或者 4 字节 + fractional seconds storage（>= MySQL 5.6.4）|...|...|
 |YEAR[(2\|4)]|1字节|...|...|
 
+|Fractional Seconds Precision|Storage Required|
+|:-:|-|
+|0|0 字节|
+|1, 2|1 字节|
+|3, 4|2 字节|
+|5, 6|3 字节|
+
+
+
 
 **3.转换规则**
 
