--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -58,7 +58,7 @@ SQL>
 |TIME[(fsp)]|3字节（< MySQL 5.6.4） 或者 3 字节 + fractional seconds storage（>= MySQL 5.6.4）|范围：'-838:59:59.000000' ~ '838:59:59.000000'；格式：'HH:MM:SS[.fraction]' 或者 'HHH:MM:SS[.fraction]'|MySQL 5.6.5 开始，支持字段值的初始化和更新|
 |DATETIME[(fsp)]|8字节（< MySQL 5.6.4） 或者 5 字节 + fractional seconds storage （>= MySQL 5.6.4） |范围：'1000-01-01 00:00:00.000000' ~ '9999-12-31 23:59:59.999999'；格式为：'YYYY-MM-DD HH:MM:SS[.fraction]'|...|
 |TIMESTAMP[(fsp)]|4字节（< MySQL 5.6.4） 或者 4 字节 + fractional seconds storage（>= MySQL 5.6.4）|范围：'1970-01-01 00:00:01.000000' UTC ~ '2038-01-19 03:14:07.999999' UTC；从epoch ('1970-01-01 00:00:00' UTC)纪元开始计算的秒数|...|
-|YEAR[(2\|4)]|1字节|范围：4位格式：1901 ~ 2155, 和 0000；2位格式： 70 ~ 69（1970 to 2069）、00 ~ 69（2000 ~ 2069）；格式：YYYY or YY |...|
+|YEAR[(2\|4)]|1字节|范围：4位格式：1901 ~ 2155, 和 0000；2位格式： 70 ~ 69（1970 to 2069）、00 ~ 69（2000 ~ 2069）；格式：YYYY or YY |默认是：YEAR(4)，YEAR(2) MySQL 5.6.6 开始被废弃了|
 
 |Fractional Seconds Precision|Storage Required|
 |:-:|-|
