--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -52,6 +52,11 @@ SQL>
 
 **2.MySQL日期类型**
 
+MySQL的日期类型受sql_mode值影响。
++ ALLOW_INVALID_DATES：在严格模式下，不符合日期格式的，则转换为 '0000-00-00'
++ NO_ZERO_IN_DATE：日期值包含0
++ NO_ZERO_DATE ：全0，'0000-00-00'
+
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
 |DATE|3字节|范围：'1000-01-01' ~ '9999-12-31'；格式为：'YYYY-MM-DD'|N/A|
