--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -79,7 +79,8 @@ MySQL的日期类型受sql_mode值影响。
 
 |Oracle数据类型|转换规则|MySQL数据类型|
 |:-:|-|-|
-|DATE|...|DATETIME|
+|DATE|包含：年、月、日、时、分、秒|DATETIME|
+|TIMESTAMP|...|...|...|
 
 
 
