--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -80,7 +80,7 @@ MySQL的日期类型受sql_mode值影响。
 |Oracle数据类型|转换规则|MySQL数据类型|
 |:-:|-|-|
 |DATE|包含：年、月、日、时、分、秒|DATETIME|
-|TIMESTAMP|...|...|...|
+|TIMESTAMP|fsp默认是6|...|
 |TIMESTAMP(fsp)|...|...|
 
 
