--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -82,3 +82,10 @@ MySQL的日期类型受sql_mode值影响。
 |DATE|包含：年、月、日、时、分、秒|DATETIME|
 |TIMESTAMP\|TIMESTAMP(6)|Oracle默认fsp是6，MySQL默认fsp是0|DATETIME(6)|
 |TIMESTAMP(fsp)|6 < fsp <=9 不支持|DATETIME(fsp)|
+
+```
+Oracle默认日期格式:
+
+```
+
+
