--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -85,7 +85,34 @@ MySQL的日期类型受sql_mode值影响。
 
 ```
 Oracle默认日期格式:
+SQL> select * from nls_database_parameters;
 
+PARAMETER                      VALUE
+------------------------------ ------------------------------
+NLS_LANGUAGE                   AMERICAN
+NLS_TERRITORY                  AMERICA
+NLS_CURRENCY                   $
+NLS_ISO_CURRENCY               AMERICA
+NLS_NUMERIC_CHARACTERS         .,
+NLS_CHARACTERSET               AL32UTF8
+NLS_CALENDAR                   GREGORIAN
+NLS_DATE_FORMAT                DD-MON-RR        --日期格式
+NLS_DATE_LANGUAGE              AMERICAN
+NLS_SORT                       BINARY
+NLS_TIME_FORMAT                HH.MI.SSXFF AM   --时间格式
+NLS_TIMESTAMP_FORMAT           DD-MON-RR HH.MI.SSXFF AM  --时间戳格式
+NLS_TIME_TZ_FORMAT             HH.MI.SSXFF AM TZR        --带时区的时间格式
+NLS_TIMESTAMP_TZ_FORMAT        DD-MON-RR HH.MI.SSXFF AM TZR --带时区的时间戳格式
+NLS_DUAL_CURRENCY              $
+NLS_COMP                       BINARY
+NLS_LENGTH_SEMANTICS           BYTE
+NLS_NCHAR_CONV_EXCP            FALSE
+NLS_NCHAR_CHARACTERSET         AL16UTF16
+NLS_RDBMS_VERSION              11.2.0.4.0
+
+20 rows selected.
+
+SQL> 
 ```
 
 
