--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -82,6 +82,11 @@ MySQL的日期类型受sql_mode值影响。
 |DATE|包含：年、月、日、时、分、秒|DATETIME|
 |TIMESTAMP\|TIMESTAMP(6)|Oracle默认fsp是6，MySQL默认fsp是0|DATETIME(6)|
 |TIMESTAMP(fsp)|6 < fsp <=9 不支持|DATETIME(fsp)|
+|TIMESTAMP WITH TIME ZONE|Oracle默认fsp是6，MySQL默认fsp是0|...|
+|TIMESTAMP(fsp) WITH TIME ZONE|6 < fsp <=9 不支持|...|
+|TIMESTAMP WITH LOCAL TIME ZONE|Oracle默认fsp是6，MySQL默认fsp是0|...|
+|TIMESTAMP(fsp) WITH LOCAL TIME ZONE|6 < fsp <=9 不支持|...|
+
 
 ```
 Oracle默认日期格式:
