--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -72,7 +72,10 @@ MySQL的日期类型受sql_mode值影响。
 |3, 4|2 字节|
 |5, 6|3 字节|
 
-
+ ```
+查看当前时区：time_zone 变量
+时区转换函数：CONVERT_TZ(dt,from_tz,to_tz)
+ ```
 
 
 **3.转换规则**
