--- a/mysql/20180821/20180821_01.md
+++ b/mysql/20180821/20180821_01.md
@@ -89,9 +89,9 @@ MySQL的日期类型受sql_mode值影响。
 |TIMESTAMP(fsp) WITH TIME ZONE|6 < fsp <=9 不支持|DATETIME(fsp)|
 |TIMESTAMP WITH LOCAL TIME ZONE|Oracle默认fsp是6，MySQL默认fsp是0|DATETIME(6)|
 |TIMESTAMP(fsp) WITH LOCAL TIME ZONE|6 < fsp <=9 不支持|DATETIME(fsp)|
-|INTERVAL YEAR TO MONTH|...|不支持|
-|INTERVAL YEAR (yp) TO MONTH|...|不支持|
-|INTERVAL DAY [(dp)] TO SECOND [(fsp)]|...|不支持|
+|INTERVAL YEAR TO MONTH|N/A|不支持|
+|INTERVAL YEAR (yp) TO MONTH|N/A|不支持|
+|INTERVAL DAY [(dp)] TO SECOND [(fsp)]|N/A|不支持|
 
 
 ```
