--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -3,10 +3,13 @@
 
 ### 一、LONG 和 RAW 类型 对比
 
-**1.LONG 和 RAW 类型**
+**1. Oracle 数据库 LONG 和 RAW 类型**
 
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
 |LONG|...|...|...|
 |LONG RAW|...|...|...|
 |RAW(size)|...|...|...|
+
+
+**2. MySQL 数据库**
