--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -8,7 +8,7 @@
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
 |LONG|存储变长字符数据：最大存储达2GB，或 2^31 -1 字节|N/A|为了向后兼容性，建议使用CLOB、NCLOB代替，TO_LOB(long_column) 把 LONG值转换为 LOB 值|
-|LONG RAW|...|...|...|
+|LONG RAW|存储二进制数据：作为数据库列最大存储2G字节的数据，作为变量最大32760字节|N/A|为了向后兼容性，建议使用BLOB、BFILE代替，TO_LOB(long_column) 把 LONG RAW 值转换为 LOB 值|
 |RAW(size)|...|...|...|
 
 
