--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -11,7 +11,7 @@
 |LONG RAW|存储二进制数据：作为数据库列最大存储2G字节的数据，作为变量最大32760字节|N/A|为了向后兼容性，建议使用BLOB、BFILE代替，TO_LOB(long_column) 把 LONG RAW 值转换为 LOB 值|
 |RAW(size)|存储二进制数据：最大 2000 字节. 必须为 RAW 值指定size大小. 作为变量最大32767字节|N/A|RAW 类似于 VARCHAR2，但是RAW 不依赖于字符集不同而发生自动转换|
 
-**2. MySQL 数据库**
+**2. MySQL 数据类型**
 
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
@@ -25,3 +25,5 @@
 |TEXT[(M)]|...|...|...|
 |MEDIUMTEXT|...|...|...|
 |LONGTEXT|...|...|...|
+
+**3. 转换规则**
