--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -13,17 +13,17 @@
 
 **2. MySQL 数据类型**
 
-|数据类型|存储空间|范围|说明|
-|:-:|-|-|-|
-|BINARY[(M)]|N/A|M 是字节长度，默认是 1|类似于CHAR类型，但存储 二进制数据,自动填充 \0 到指定长度 |
-|VARBINARY(M)|N/A|M 表示最大字节长度|类似于VARCHAR类型，但存储 二进制数据|
-|TINYBLOB|L + 1 Bytes whereas L<2 ^8（最大：255 (2^8 − 1)  字节，额外存储 1字节前缀）|N/A|...|
-|BLOB[(M)]|L + 2 Bytes whereas L<2^16（最大：65,535 (2^16 − 1) 字节，额外存储 2字节前缀）|N/A|...|
-|MEDIUMBLOB|L + 3 Bytes whereas L < 2^ 24（最大：6,777,215 (2^24 − 1) 字节，额外3字节前缀）|N/A|...|
-|LONGBLOB|L + 4 Bytes whereas L < 2 ^ 32（最大：4,294,967,295 or 4GB (2^32 − 1)  字节，额外 4 字节前缀）|N/A|...|
-|TINYTEXT|L + 1 Bytes whereas L<2 ^8（最大：255 (2^8 − 1) 字符，额外 1 字节前缀（多字节字符集，存储的少））|N/A|...|
-|TEXT[(M)]|L + 2 Bytes whereas L<2^16（最大：65,535 (2^16 − 1) 字符，额外 2 字节前缀（多字节字符集，存储的少））|N/A|...|
-|MEDIUMTEXT|L + 3 Bytes whereas L < 2^ 24（最大：6,777,215 (2^24 − 1) 字符，额外 3 字节前缀（多字节字符集，存储的少））|N/A|...|
-|LONGTEXT|L + 4 Bytes whereas L < 2 ^ 32（最大：4,294,967,295 or 4GB (2^32 − 1) 字符，额外 4 字节前缀（多字节字符集，存储的少） 也依赖于C/S的配置的最大packet大小(max_allowed_packet参数)和可用内存）|N/A|...|
+|数据类型|存储空间|说明|
+|:-:|-|-|
+|BINARY[(M)]|M 是字节长度，默认是 1|类似于CHAR类型，但存储 二进制数据,自动填充 \0 到指定长度 |
+|VARBINARY(M)|M 表示最大字节长度|类似于VARCHAR类型，但存储 二进制数据|
+|TINYBLOB|L + 1 Bytes whereas L<2 ^8（最大：255 (2^8 − 1)  字节，额外存储 1字节前缀）|N/A|
+|BLOB[(M)]|L + 2 Bytes whereas L<2^16（最大：65,535 (2^16 − 1) 字节，额外存储 2字节前缀）|N/A|
+|MEDIUMBLOB|L + 3 Bytes whereas L < 2^ 24（最大：6,777,215 (2^24 − 1) 字节，额外3字节前缀）|N/A|
+|LONGBLOB|L + 4 Bytes whereas L < 2 ^ 32（最大：4,294,967,295 or 4GB (2^32 − 1)  字节，额外 4 字节前缀）|N/A|
+|TINYTEXT|L + 1 Bytes whereas L<2 ^8（最大：255 (2^8 − 1) 字符，额外 1 字节前缀（多字节字符集，存储的少））|N/A|
+|TEXT[(M)]|L + 2 Bytes whereas L<2^16（最大：65,535 (2^16 − 1) 字符，额外 2 字节前缀（多字节字符集，存储的少））|N/A|
+|MEDIUMTEXT|L + 3 Bytes whereas L < 2^ 24（最大：6,777,215 (2^24 − 1) 字符，额外 3 字节前缀（多字节字符集，存储的少））|N/A|
+|LONGTEXT|L + 4 Bytes whereas L < 2 ^ 32（最大：4,294,967,295 or 4GB (2^32 − 1) 字符，额外 4 字节前缀（多字节字符集，存储的少） 也依赖于C/S的配置的最大packet大小(max_allowed_packet参数)和可用内存）|N/A|
 
 **3. 转换规则**
