--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -29,3 +29,9 @@
 |LONGTEXT|L + 4 Bytes whereas L < 2 ^ 32（最大：4,294,967,295 or 4GB (2^32 − 1) 字符，额外 4 字节前缀（多字节字符集，存储的少） 也依赖于C/S的配置的最大packet大小(max_allowed_packet参数)和可用内存）|字符数据|
 
 **3. 转换规则**
+
+|Oracle|转换规则|MySQL|
+|:-:|-|-|
+|LONG|...|...|
+|LONG RAW|...|...|
+|RAW|...|...|
