--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -33,6 +33,6 @@
 
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
-|LONG|字符数据|LONGTEXT|
-|LONG RAW|二进制数据|...|
+|LONG|字符数据，最大2GB |LONGTEXT|
+|LONG RAW|二进制数据,最大2GB |LONGBLOB|
 |RAW(size)|二进制数据|...|
