--- a/mysql/20180903/20180903_01.md
+++ b/mysql/20180903/20180903_01.md
@@ -35,4 +35,15 @@
 |:-:|-|-|
 |LONG|字符数据，最大2GB |LONGTEXT|
 |LONG RAW|二进制数据,最大2GB |LONGBLOB|
-|RAW(size)|二进制数据|...|
+|RAW(size)|二进制数据, 1 < size <= 2000，如果以二进制形式存储，则VARBINARY(size * 2)|VARBINARY(size)|
+
+```
+-- Oracle读取时，以字符串读取出来
+1. UTL_RAW.CAST_TO_RAW :将VARCHAR2字符串转换为RAW。
+2. UTL_RAW.CAST_TO_VARCHAR2: 将RAW字符串转换为VARCHAR2。
+3. RAWTOHEX / HEXTORAW
+
+
+-- MySQL插入时，以字符串方式掺入
+1.HEX() / UNHEX() 
+```
