--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -1,1 +1,14 @@
-1111
+## Ora2MySQL兼容性分析：数据类型（5）之 大对象（Large Object (LOB)）数据类型
+---
+
+### 一、大对象（Large Object (LOB) Data Types） 对比
+
+**1. Oracle 大对象数据类型 *
+
+
+
+**2. MySQL 数据类型**
+
+
+
+**3. 转换规则**
