--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -5,11 +5,12 @@
 
 **1. Oracle 大对象数据类型**
 
-
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
-
-
+|BLOB|...|...|...|
+|CLOB|...|...|...|
+|NCLOB|...|...|...|
+|BFILE|...|...|...|
 
 **2. MySQL 数据类型**
 
