--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -5,12 +5,12 @@
 
 **1. Oracle 大对象数据类型**
 
-|数据类型|存储空间|范围|说明|
-|:-:|-|-|-|
-|BLOB|...|...|...|
-|CLOB|...|...|...|
-|NCLOB|...|...|...|
-|BFILE|...|...|...|
+|数据类型|存储空间|说明|
+|:-:|-|-|
+|BLOB|二进制大对象，最大大小是：(4 gigabytes - 1) * (database block size)|存储于DB内部,支持事务|
+|CLOB|字符大对象，包含 单字节 或者 多字节字符，定长和变长字符集（取决于数据库字符集）都支持，最大大小是：(4 gigabytes - 1) * (database block size)|存储于DB内部,支持事务|
+|NCLOB|字符大对象，包含 Unicode 字符，定长和变长字符集（取决于数据库国家字符集）都支持，最大大小是：(4 gigabytes - 1) * (database block size). 存储本地字符集数据|存储于DB内部,支持事务|
+|BFILE|存储在数据库之外的1个大的二进制文件的地址，启用字节流 I/O 访问驻留在数据库服务器上的外部LOBs，最大大小：4 gigabytes（2^64-1 bytes），可能受OS限制会有限制|存储于DB外部,不支持事务|
 
 **2. MySQL 数据类型**
 
