--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -17,3 +17,10 @@
 
 
 **3. 转换规则**
+
+|Oracle|转换规则|MySQL|
+|:-:|-|-|
+|BLOB|...|LONGBLOB|
+|CLOB|...|LONGTEXT|
+|NCLOB|...|NVARCHAR(max)|
+|BFILE|...|VARCHAR(255)|
