--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -13,14 +13,15 @@
 |BFILE|存储在数据库之外的1个大的二进制文件的地址，启用字节流 I/O 访问驻留在数据库服务器上的外部LOBs，最大大小：4 gigabytes（2^64-1 bytes），可能受OS限制会有限制|存储于DB外部,不支持事务|
 
 **2. MySQL 数据类型**
-
+  
+  可参考：[Ora2MySQL兼容性分析：数据类型（4）之 LONG 和 RAW 类型](https://github.com/oomdb/ora2opendb/blob/master/mysql/20180903/20180903_01.md)
 
 
 **3. 转换规则**
 
 |Oracle|转换规则|MySQL|
 |:-:|-|-|
-|BLOB|...|LONGBLOB|
-|CLOB|...|LONGTEXT|
-|NCLOB|...|NVARCHAR(max)|
-|BFILE|...|VARCHAR(255)|
+|BLOB|二进制数据|LONGBLOB|
+|CLOB|字符数据|LONGTEXT|
+|NCLOB|字符数据|NVARCHAR(max)|
+|BFILE|VARCHAR(255)|不支持|
