--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -14,7 +14,7 @@
 
 **2. MySQL 数据类型**
   
-  可参考：[Ora2MySQL兼容性分析：数据类型（4）之 LONG 和 RAW 类型](https://github.com/oomdb/ora2opendb/blob/master/mysql/20180903/20180903_01.md)
+  **可参考：** [Ora2MySQL兼容性分析：数据类型（4）之 LONG 和 RAW 类型](https://github.com/oomdb/ora2opendb/blob/master/mysql/20180903/20180903_01.md)
 
 
 **3. 转换规则**
@@ -23,5 +23,5 @@
 |:-:|-|-|
 |BLOB|二进制数据|LONGBLOB|
 |CLOB|字符数据|LONGTEXT|
-|NCLOB|字符数据|NVARCHAR(max)|
-|BFILE|VARCHAR(255)|不支持|
+|NCLOB|字符数据，或者可选：NVARCHAR(max)|LONGTEXT|
+|BFILE|可选VARCHAR(255)，数据存储url地址，文件存储在服务器上或者OSS中|不支持|
