--- a/mysql/20180903/20180903_02.md
+++ b/mysql/20180903/20180903_02.md
@@ -24,4 +24,4 @@
 |BLOB|二进制数据|LONGBLOB|
 |CLOB|字符数据|LONGTEXT|
 |NCLOB|字符数据，或者可选：NVARCHAR(max)|LONGTEXT|
-|BFILE|可选VARCHAR(255)，数据存储url地址，文件存储在服务器上或者OSS中|不支持|
+|BFILE|可选VARCHAR(255)，数据存储文件路径url地址，文件存储在服务器上或者OSS中|不支持|
