--- a/mysql/20180904/20180904_01.md
+++ b/mysql/20180904/20180904_01.md
@@ -4,3 +4,16 @@
 ### 一、 Rowid 数据类型 对比
 
 **1. Oracle 数据库 Rowid 数据类型**
+
+|数据类型|范围|说明|
+|:-:|-|-|
+|ROWID|固定长度18位|Base 64 的堆表的 row 物理地址，值主要由 ROWID 伪列返回. 由DBMS_ROWID包进行使用|
+|UROWID[(size)]|size最大为 4000 字节，默认是4000|Base 64 的 index-organized 和 foreign tables 的逻辑地址.IOT表有 logical urowids,foreign 表有 foreign urowids，urowid值也存储在ROWID 伪列中,logical rowids 依赖于表的主键，主键不变，其值不变|
+
+**2. 转换规则 **
+
+|Oracle|转换规则|MySQL|
+|:-:|-|-|
+|ROWID|固定字符长度18位|CHAR(18)|
+|UROWID|默认4000字节|VARCHAR(4000)|
+|UROWID(n)| 0 < n <= 4000|VARCHAR(n)|
