--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -2,6 +2,10 @@
 ---
 
 ### 一、背景介绍
-&nbsp;&nbsp;&nbsp;&nbsp;在迁移的过程中，发现PPAS的分区表和Oracle的分区表相比还是有很大的差异，存在很多使用上的限制，现将在转换过程中遇到约束和索引的相关问题进行相关阐述。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在迁移的过程中，发现PPAS的分区表和Oracle的分区表相比还是有很大的差异，存在很多使用上的限制，现将在转换过程中遇到约束和索引的相关问题进行相关阐述。
 
 ### 二、表分区（TABLE PARTITIONING）
+
+**1. Oracle分区表**
+
+**2. PPAS分区表**
