--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -11,6 +11,73 @@
 + 索引：唯一索引、非唯一索引。其他索引分类不是本片讨论的范畴。
 
 **1. Oracle分区表**
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Oracle针对下面的情况都可以执行OK
+```
+SQL> CREATE TABLE emp (
+  2    empno           NUMBER(4),
+  3    ename           VARCHAR2(10),
+  4    job             VARCHAR2(9) NOT NULL,
+  5    mgr             NUMBER(4),
+  6    hiredate        DATE,
+  7    sal             NUMBER(7,2),
+  8    comm            NUMBER(7,2),
+  9    deptno          NUMBER(2)
+ 10  )
+ 11  PARTITION BY RANGE(hiredate)
+ 12  (
+ 13     PARTITION p201801 VALUES LESS THAN (TO_DATE('2018-02-1', 'yyyy-mm-dd')),
+ 14     PARTITION p201802 VALUES LESS THAN (TO_DATE('2018-03-1', 'yyyy-mm-dd')),
+ 15     PARTITION p201803 VALUES LESS THAN (TO_DATE('2018-04-1', 'yyyy-mm-dd')),
+ 16     PARTITION p201804 VALUES LESS THAN (TO_DATE('2018-05-1', 'yyyy-mm-dd')),
+ 17     PARTITION p201805 VALUES LESS THAN (TO_DATE('2018-06-1', 'yyyy-mm-dd')),
+ 18     PARTITION p201806 VALUES LESS THAN (TO_DATE('2018-07-1', 'yyyy-mm-dd')),
+ 19     PARTITION p201807 VALUES LESS THAN (TO_DATE('2018-08-1', 'yyyy-mm-dd')),
+ 20     PARTITION p201808 VALUES LESS THAN (TO_DATE('2018-09-1', 'yyyy-mm-dd')),
+ 21     PARTITION p201809 VALUES LESS THAN (TO_DATE('2018-10-1', 'yyyy-mm-dd')),
+ 22     PARTITION p201810 VALUES LESS THAN (TO_DATE('2018-11-1', 'yyyy-mm-dd')),
+ 23     PARTITION p201811 VALUES LESS THAN (TO_DATE('2018-12-1', 'yyyy-mm-dd')),
+ 24     PARTITION p201812 VALUES LESS THAN (TO_DATE('2019-01-1', 'yyyy-mm-dd')),
+ 25    PARTITION pmax VALUES LESS THAN (MAXVALUE)
+ 26  );
+
+Table created.
+
+SQL> -- 主键约束
+SQL> ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno);
+
+Table altered.
+
+SQL> -- 唯一约束  
+SQL> ALTER TABLE emp ADD CONSTRAINT un_emp_ename UNIQUE(ename); 
+
+Table altered.
+
+SQL> -- 检查约束
+SQL> ALTER TABLE emp ADD CONSTRAINT ck_emp_sal CHECK(sal > 0);  
+
+Table altered.
+
+SQL> -- 单纯分布键
+SQL> CREATE INDEX idx_emp_hiredate on emp(hiredate); 
+
+Index created.
+
+SQL> -- 非分布键 
+SQL> CREATE INDEX idx_emp_job on emp(job); 
+
+Index created.
+
+SQL> -- 包含分布键
+SQL> CREATE INDEX idx_emp_hiredate_job on emp(hiredate,job); 
+
+Index created.
+
+SQL> -- 不带分布键的唯一索引
+SQL> CREATE UNIQUE INDEX un_emp_deptno on emp(deptno); 
+
+Index created.
+
+SQL> 
+```
 
 **2. PPAS分区表**
