--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -7,11 +7,14 @@
 ### 二、表分区（TABLE PARTITIONING）
 
 **主要关注点**
-+ 约束：NOT NULL非空约束、CHECK检查约束、主键约束、唯一约束、外键约束、Exclude 排他约束等。
-+ 索引：唯一索引、非唯一索引。其他索引分类不是本片讨论的范畴。
+
++ **约束**：NOT NULL非空约束、CHECK检查约束、主键约束、唯一约束、外键约束、Exclude 排他约束等。
++ **索引**：唯一索引、非唯一索引。其他索引分类不是本片讨论的范畴。
 
 **1. Oracle分区表**
+
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Oracle针对下面的情况都可以执行OK
+
 ```
 SQL> CREATE TABLE emp (
   2    empno           NUMBER(4),
