--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -91,8 +91,60 @@ SQL>
 + There is no facility available to create the matching indexes on all partitions automatically. Indexes must be added to each partition with separate commands. This also means that there is no way to create a primary key, unique constraint, or exclusion constraint spanning all partitions; it is only possible to constrain each leaf partition individually.
 + Since primary keys are not supported on partitioned tables, foreign keys referencing partitioned tables are not supported, nor are foreign key references from a partitioned table to some other table.
 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PPAS9.6和PPAS10在创建分区表的约束和索引上看似有差异，其实底层是相同的原理，只是PPAS9.6被掩藏了，具体见下面的案例：
+```
+ppas10=# set search_path to oomdb;
+SET
+ppas10=# CREATE TABLE emp (
+ppas10(#   empno           NUMBER(4),
+ppas10(#   ename           VARCHAR2(10),
+ppas10(#   job             VARCHAR2(9) NOT NULL,
+ppas10(#   mgr             NUMBER(4),
+ppas10(#   hiredate        DATE,
+ppas10(#   sal             NUMBER(7,2),
+ppas10(#   comm            NUMBER(7,2),
+ppas10(#   deptno          NUMBER(2)
+ppas10(# )
+ppas10-# PARTITION BY RANGE(hiredate)
+ppas10-# (
+ppas10(#  PARTITION p201801 VALUES LESS THAN (TO_DATE('2018-02-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201802 VALUES LESS THAN (TO_DATE('2018-03-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201803 VALUES LESS THAN (TO_DATE('2018-04-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201804 VALUES LESS THAN (TO_DATE('2018-05-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201805 VALUES LESS THAN (TO_DATE('2018-06-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201806 VALUES LESS THAN (TO_DATE('2018-07-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201807 VALUES LESS THAN (TO_DATE('2018-08-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201808 VALUES LESS THAN (TO_DATE('2018-09-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201809 VALUES LESS THAN (TO_DATE('2018-10-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201810 VALUES LESS THAN (TO_DATE('2018-11-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201811 VALUES LESS THAN (TO_DATE('2018-12-1', 'yyyy-mm-dd')),
+ppas10(#  PARTITION p201812 VALUES LESS THAN (TO_DATE('2019-01-1', 'yyyy-mm-dd')),
+ppas10(#   PARTITION pmax VALUES LESS THAN (MAXVALUE)
+ppas10(# );
+CREATE TABLE
+ppas10=# \dt+ oomdb.*  -- 显示表的个数是：分区个数 + 1,格式为：emp,emp_分区名。
+                          List of relations
+ Schema |    Name     | Type  |    Owner     |  Size   | Description 
+--------+-------------+-------+--------------+---------+-------------
+ oomdb  | emp         | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201801 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201802 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201803 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201804 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201805 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201806 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201807 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201808 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201809 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201810 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201811 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_p201812 | table | enterprisedb | 0 bytes | 
+ oomdb  | emp_pmax    | table | enterprisedb | 0 bytes | 
+(14 rows)
 
-
+ppas10=# 
+```
+  
 
 
 
