--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -142,7 +142,14 @@ ppas10=# \dt+ oomdb.*  -- 显示表的个数是：分区个数 + 1,格式为：e
  oomdb  | emp_pmax    | table | enterprisedb | 0 bytes | 
 (14 rows)
 
+ppas10=# -- 主键约束
+ppas10=# ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno);
+错误:  primary key constraints are not supported on partitioned tables
+LINE 1: ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno);
+                            ^
 ppas10=# 
+分区表添加主键需要对单个分区进行主键
+
 ```
   
 
