--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -142,13 +142,27 @@ ppas10=# \dt+ oomdb.*  -- 显示表的个数是：分区个数 + 1,格式为：e
  oomdb  | emp_pmax    | table | enterprisedb | 0 bytes | 
 (14 rows)
 
-ppas10=# -- 主键约束
-ppas10=# ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno);
+ppas10=# 1. -- 主键约束
+ppas10=# ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno); -- PPAS9.6可以对emp原表进行主键创建。
 错误:  primary key constraints are not supported on partitioned tables
 LINE 1: ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno);
                             ^
 ppas10=# 
-分区表添加主键需要对单个分区进行主键
+分区表添加主键需要对单个分区进行主键创建，如：
+ppas10=# ALTER TABLE oomdb.emp_p201801 ADD CONSTRAINT pk_emp_p201801 PRIMARY KEY(empno);
+ALTER TABLE
+ppas10=# ALTER TABLE oomdb.emp_p201802 ADD CONSTRAINT pk_emp_p201802 PRIMARY KEY(empno);
+ALTER TABLE
+ppas10=# 
+
+...... 此处省略，其他分区的主键创建语句
+
+ppas10=# ALTER TABLE oomdb.emp_p201812 ADD CONSTRAINT pk_emp_p201812 PRIMARY KEY(empno);
+ALTER TABLE
+ppas10=# ALTER TABLE oomdb.emp_pmax ADD CONSTRAINT pk_emp_pmax PRIMARY KEY(empno);
+ALTER TABLE
+ppas10=# 
+
 
 ```
   
