--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -148,24 +148,74 @@ ppas10=# ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno); -- PPAS9.6可
 LINE 1: ALTER TABLE emp ADD CONSTRAINT pk_emp PRIMARY KEY(empno);
                             ^
 ppas10=# 
-分区表添加主键需要对单个分区进行主键创建，如：
+-- 分区表添加主键需要对单个分区进行主键创建，如：
 ppas10=# ALTER TABLE oomdb.emp_p201801 ADD CONSTRAINT pk_emp_p201801 PRIMARY KEY(empno);
 ALTER TABLE
 ppas10=# ALTER TABLE oomdb.emp_p201802 ADD CONSTRAINT pk_emp_p201802 PRIMARY KEY(empno);
 ALTER TABLE
 ppas10=# 
-
 ...... 此处省略，其他分区的主键创建语句
-
 ppas10=# ALTER TABLE oomdb.emp_p201812 ADD CONSTRAINT pk_emp_p201812 PRIMARY KEY(empno);
 ALTER TABLE
 ppas10=# ALTER TABLE oomdb.emp_pmax ADD CONSTRAINT pk_emp_pmax PRIMARY KEY(empno);
 ALTER TABLE
 ppas10=# 
 
+ppas10=# 2. -- 唯一约束
+ppas10=# ALTER TABLE emp ADD CONSTRAINT un_emp_ename UNIQUE(ename);  -- PPAS9.6可以对emp原表进行唯一约束创建。
+错误:  unique constraints are not supported on partitioned tables
+LINE 1: ALTER TABLE emp ADD CONSTRAINT un_emp_ename UNIQUE(ename);
+                            ^
+ppas10=# 
+-- 分区表添加唯一约束需要对单个分区进行唯一约束创建，如：
+ppas10=# ALTER TABLE oomdb.emp_p201801 ADD CONSTRAINT un_emp_p201801_ename UNIQUE(ename);
+ALTER TABLE
+ppas10=# ALTER TABLE oomdb.emp_p201802 ADD CONSTRAINT un_emp_p201802_ename UNIQUE(ename);
+ALTER TABLE
+ppas10=# 
+...... 此处省略，其他分区的唯一约束创建语句
+ppas10=# ALTER TABLE oomdb.emp_p201812 ADD CONSTRAINT un_emp_p201812_ename UNIQUE(ename);
+ALTER TABLE
+ppas10=# ALTER TABLE oomdb.emp_pmax ADD CONSTRAINT un_emp_pmax_ename UNIQUE(ename);
+ALTER TABLE
+ppas10=# 
+
+ppas10=# 3. -- CHECK检查约束
+ppas10=# ALTER TABLE emp ADD CONSTRAINT ck_emp_sal CHECK(sal > 0); -- PPAS9.6/PPAS10对emp可以进行CHECK检查约束。
+ALTER TABLE
+ppas10=# 
+
+ppas10=# -- 4. 索引问题
+ppas10=# -- 1). 单纯分布键
+ppas10=# CREATE INDEX idx_emp_hiredate on oomdb.emp(hiredate); 
+错误:  cannot create index on partitioned table "emp"
+ppas10=# -- 2). 非分布键 
+ppas10=# CREATE INDEX idx_emp_job on oomdb.emp(job); 
+错误:  cannot create index on partitioned table "emp"
+ppas10=# -- 3). 包含分布键
+ppas10=# CREATE INDEX idx_emp_hiredate_job on oomdb.emp(hiredate,job); 
+错误:  cannot create index on partitioned table "emp"
+ppas10=# -- 4). 不带分布键的唯一索引
+ppas10=# CREATE UNIQUE INDEX un_emp_deptno on oomdb.emp(deptno); 
+错误:  cannot create index on partitioned table "emp"
+ppas10=# 
+
+注意：CHECK检查约束 和 NOT NULL非空约束，对原始表添加，则每个分区表都存在，不需要再对每个分区单独创建。
+
+ppas10=# 
+ppas10=# CREATE INDEX idx_emp_p201801_hiredate on oomdb.emp_p201801(hiredate); 
+CREATE INDEX
+ppas10=# CREATE INDEX idx_emp_p201802_hiredate on oomdb.emp_p201802(hiredate);
+CREATE INDEX
+...... 此处省略，其他分区的索引（index）创建语句
+ppas10=# CREATE INDEX idx_emp_p201812_hiredate on oomdb.emp_p201812(hiredate); 
+CREATE INDEX
+ppas10=# CREATE INDEX idx_emp_pmax_hiredate on oomdb.emp_pmax(hiredate); 
+CREATE INDEX
+ppas10=# 
 
 ```
-  
-
-
-
+**3. 小结**
+注意：
+1. PPAS不支持全局的unique, primary key, exclude, foreign key约束，只能在对应的分区建立这些约束。
+2. PPAS9.6只是作用在原始的表名emp上，而针对每个分区并没有创建，所以和PPAS10版本一样，也是需要单独创建的。
