--- a/ppas/20180920/20180920_01.md
+++ b/ppas/20180920/20180920_01.md
@@ -216,6 +216,6 @@ ppas10=#
 
 ```
 **3. 小结**
-注意：
-1. PPAS不支持全局的unique, primary key, exclude, foreign key约束，只能在对应的分区建立这些约束。
-2. PPAS9.6只是作用在原始的表名emp上，而针对每个分区并没有创建，所以和PPAS10版本一样，也是需要单独创建的。
++ PPAS对CHECK约束和NOT NULL非空约束对原表创建就可以，是全局的。
++ PPAS不支持全局的unique, primary key, exclude, foreign key约束，只能在对应的分区建立这些约束。
++ PPAS9.6只是作用在原始的表名emp上，而针对每个分区并没有创建，所以和PPAS10版本一样，也是需要单独创建的。
