--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -2,5 +2,8 @@
 ---
 
 ### 一、背景介绍
-  PPAS是enterprisedb公司为了高度兼容Oracle而诞生的数据库产品，因此其大部分的数据类型是和Oracle高度兼容度的。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PPAS是enterprisedb公司为了高度兼容Oracle而诞生的数据库产品，因此其大部分的数据类型是和Oracle高度兼容度的。
+
 ### 二、转换规则
+
+**各个数据库类型转换规则**
