--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -7,3 +7,42 @@
 ### 二、转换规则
 
 **各个数据库类型转换规则**
+
+1. 字符类型
+CHAR [(size [BYTE | CHAR])]
+VARCHAR2(size [BYTE | CHAR])
+NCHAR[(size)]
+NVARCHAR2(size)
+
+2. 数值类型
+NUMBER [ (p [, s]) ]
+FLOAT [(p)]	
+BINARY_FLOAT	
+BINARY_DOUBLE
+
+3. 日期类型
+DATE
+TIMESTAMP [(fractional_seconds_precision)]
+TIMESTAMP [(fractional_seconds_precision)] WITH TIME ZONE
+TIMESTAMP [(fractional_seconds_precision)] WITH LOCAL TIME ZONE
+INTERVAL YEAR [(year_precision)] TO MONTH
+INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]
+
+4. LONG 和 RAW 类型 
+LONG
+LONG RAW
+RAW(size)
+
+5.大对象类型
+BLOB
+CLOB
+NCLOB	
+BFILE
+
+6. ROWID类型
+ROWID
+UROWID[(size)]	
+
+7. Oracle特有数据类型
+
+
