--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -39,10 +39,12 @@ RAW(size)
 
 5. 大对象类型
 
-BLOB
-CLOB
-NCLOB	
-BFILE
+|Oracle|转换规则|PPAS|底层存储类型|
+|:-:|-|-|-|
+|BLOB|-|-|-|
+|CLOB|-|-|-|
+|NCLOB|-|-|-|
+|BFILE|-|-|-|
 
 6. ROWID类型
 
