--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -39,9 +39,9 @@ RAW(size)
 
 |Oracle|转换规则|PPAS|底层存储类型|
 |:-:|-|-|-|
-|BLOB|-|-|-|
-|CLOB|-|-|-|
-|NCLOB|-|-|-|
+|BLOB|-|BLOB|BYTEA|
+|CLOB|-|CLOB|TEXT|
+|NCLOB|-|TEXT|TEXT|
 |BFILE|不支持|N/A|OS上的非结构化二进制数据
 
 **6. ROWID类型**
