--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -37,12 +37,12 @@ RAW(size)
 
 **5. 大对象类型**
 
-|Oracle|转换规则|PPAS|底层存储类型|
+|Oracle|PPAS|PPAS底层存储类型|
 |:-:|-|-|-|
-|BLOB|-|BLOB|BYTEA|
-|CLOB|-|CLOB|TEXT|
-|NCLOB|-|TEXT|TEXT|
-|BFILE|不支持|N/A|OS上的非结构化二进制数据
+|BLOB|BLOB|BYTEA|
+|CLOB|CLOB|TEXT|
+|NCLOB|TEXT|TEXT|
+|BFILE|不支持|OS上的非结构化二进制数据
 
 **6. ROWID类型**
 
