--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -30,10 +30,11 @@ INTERVAL YEAR [(year_precision)] TO MONTH
 INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]
 
 **4. LONG 和 RAW 类型** 
-
-LONG
-LONG RAW
-RAW(size)
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
+|LONG|LONG|TEXT|
+|LONG RAW|LONG RAW|BYTEA|
+|RAW(size)|RAW(size)|BYTEA|
 
 **5. 大对象类型**
 
