--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -44,12 +44,15 @@ INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]
 |BLOB|BLOB|BYTEA|
 |CLOB|CLOB|TEXT|
 |NCLOB|TEXT|TEXT|
-|BFILE|不支持|OS上的非结构化二进制数据
+|BFILE|不支持|OS上的非结构化二进制数据|
 
 **6. ROWID类型**
 
-ROWID
-UROWID[(size)]	
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
+|ROWID|CHAR(18)|PPAS有rowid类型,但是存储格式不一致，因此不适合转换|
+|UROWID|VARCHAR(4000)|N/A|
+|UROWID(size)|VARCHAR(n)|N/A|	
 
 **7. Oracle特有数据类型**
 
