--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -22,12 +22,21 @@ BINARY_DOUBLE
 
 **3. 日期类型**
 
-DATE
-TIMESTAMP [(fractional_seconds_precision)]
-TIMESTAMP [(fractional_seconds_precision)] WITH TIME ZONE
-TIMESTAMP [(fractional_seconds_precision)] WITH LOCAL TIME ZONE
-INTERVAL YEAR [(year_precision)] TO MONTH
-INTERVAL DAY [(day_precision)] TO SECOND [(fractional_seconds_precision)]
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
+|DATE|DATE|TIMESTAMP(0)|
+
+
+TIMESTAMP|TIMESTAMP(6)	Oracle默认fsp是6，MySQL默认fsp是0	DATETIME(6)
+TIMESTAMP(fsp)  	6 < fsp <=9 不支持	DATETIME(fsp)
+TIMESTAMP WITH TIME ZONE	Oracle默认fsp是6，MySQL默认fsp是0	DATETIME(6)
+TIMESTAMP(fsp) WITH TIME ZONE	6 < fsp <=9 不支持	DATETIME(fsp)
+TIMESTAMP WITH LOCAL TIME ZONE	Oracle默认fsp是6，MySQL默认fsp是0	DATETIME(6)
+TIMESTAMP(fsp) WITH LOCAL TIME ZONE	6 < fsp <=9 不支持	DATETIME(fsp)
+INTERVAL YEAR TO MONTH	N/A	不支持
+INTERVAL YEAR (yp) TO MONTH	N/A	不支持
+INTERVAL DAY [(dp)] TO SECOND [(fsp)]	N/A	不支持
+
 
 **4. LONG 和 RAW 类型** 
 
