--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -25,17 +25,15 @@ BINARY_DOUBLE
 |Oracle|PPAS|PPAS底层存储类型|
 |:-:|-|-|
 |DATE|DATE|TIMESTAMP(0)|
-
-
-TIMESTAMP|TIMESTAMP(6)	Oracle默认fsp是6，MySQL默认fsp是0	DATETIME(6)
-TIMESTAMP(fsp)  	6 < fsp <=9 不支持	DATETIME(fsp)
-TIMESTAMP WITH TIME ZONE	Oracle默认fsp是6，MySQL默认fsp是0	DATETIME(6)
-TIMESTAMP(fsp) WITH TIME ZONE	6 < fsp <=9 不支持	DATETIME(fsp)
-TIMESTAMP WITH LOCAL TIME ZONE	Oracle默认fsp是6，MySQL默认fsp是0	DATETIME(6)
-TIMESTAMP(fsp) WITH LOCAL TIME ZONE	6 < fsp <=9 不支持	DATETIME(fsp)
-INTERVAL YEAR TO MONTH	N/A	不支持
-INTERVAL YEAR (yp) TO MONTH	N/A	不支持
-INTERVAL DAY [(dp)] TO SECOND [(fsp)]	N/A	不支持
+|TIMESTAMP\|TIMESTAMP(6)|TIMESTAMP(6)|N/A|
+|TIMESTAMP(fsp)|TIMESTAMP(fsp)|其中6 < fsp <=9 不支持|
+|TIMESTAMP WITH TIME ZONE|TIMESTAMP WITH TIME ZONE|-|
+|TIMESTAMP(fsp) WITH TIME ZONE|TIMESTAMP(fsp) WITH TIME ZONE|其中	6 < fsp <=9 不支持|
+|TIMESTAMP WITH LOCAL TIME ZONE|TIMESTAMP WITH TIME ZONE|-|
+|TIMESTAMP(fsp) WITH LOCAL TIME ZONE|TIMESTAMP(fsp) WITH TIME ZONE|其中	6 < fsp <=9 不支持|
+|INTERVAL YEAR TO MONTH|INTERVAL YEAR TO MONTH|N/A|
+|INTERVAL YEAR (yp) TO MONTH|INTERVAL YEAR TO MONTH|yp不支持|
+|INTERVAL DAY [(dp)] TO SECOND [(fsp)]|INTERVAL DAY TO SECOND [(p)]|dp不支持|
 
 
 **4. LONG 和 RAW 类型** 
