--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -27,9 +27,9 @@ BINARY_DOUBLE
 |DATE|DATE|TIMESTAMP(0)|
 |TIMESTAMP\|TIMESTAMP(6)|TIMESTAMP(6)|N/A|
 |TIMESTAMP(fsp)|TIMESTAMP(fsp)|其中6 < fsp <=9 不支持|
-|TIMESTAMP WITH TIME ZONE|TIMESTAMP WITH TIME ZONE|-|
+|TIMESTAMP WITH TIME ZONE|TIMESTAMP WITH TIME ZONE|N/A|
 |TIMESTAMP(fsp) WITH TIME ZONE|TIMESTAMP(fsp) WITH TIME ZONE|其中	6 < fsp <=9 不支持|
-|TIMESTAMP WITH LOCAL TIME ZONE|TIMESTAMP WITH TIME ZONE|-|
+|TIMESTAMP WITH LOCAL TIME ZONE|TIMESTAMP WITH TIME ZONE|N/A|
 |TIMESTAMP(fsp) WITH LOCAL TIME ZONE|TIMESTAMP(fsp) WITH TIME ZONE|其中	6 < fsp <=9 不支持|
 |INTERVAL YEAR TO MONTH|INTERVAL YEAR TO MONTH|N/A|
 |INTERVAL YEAR (yp) TO MONTH|INTERVAL YEAR TO MONTH|yp不支持|
