--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -36,6 +36,9 @@ BINARY_DOUBLE
 |INTERVAL DAY [(dp)] TO SECOND [(fsp)]|INTERVAL DAY TO SECOND [(p)]|dp不支持|
 
  注意：针对INTERVAL数据类型，为了兼容Oracle的格式，需要设置参数：intervalstyle，默认值是postgres,建议设置为**sql_standard**。可选值有：sql_standard、postgres、postgres_verbose 或者 iso_8601。
+ ```
+ set intervalstyle=sql_standard;
+ ```
 
 
 **4. LONG 和 RAW 类型** 
