--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -15,6 +15,8 @@ NVARCHAR2(size)
 
 **2. 数值类型**
 
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
 NUMBER [ (p [, s]) ]
 FLOAT [(p)]	
 BINARY_FLOAT	
@@ -66,6 +68,11 @@ BINARY_DOUBLE
 |UROWID|VARCHAR(4000)|N/A|
 |UROWID(size)|VARCHAR(n)|N/A|	
 
-**7. Oracle特有数据类型**
+**7. Boolean 类型**
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
+|BOOLEAN|BOOLEAN|N/A|
+
+**8. Oracle特有数据类型**
 
 
