--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -17,10 +17,11 @@ NVARCHAR2(size)
 
 |Oracle|PPAS|PPAS底层存储类型|
 |:-:|-|-|
-NUMBER [ (p [, s]) ]
-FLOAT [(p)]	
-BINARY_FLOAT	
-BINARY_DOUBLE
+|NUMBER [ (p [, s]) ]|
+|FLOAT|FLOAT|DOUBLE PRECISION|
+|FLOAT(p)]|FLOAT(p)|FLOAT(1) ~ FLOAT(24)：等价于REAL；FLOAT(25) ~ FLOAT(53)：等价于DOUBLE PRECISION|
+|BINARY_FLOAT|REAL|N/A|
+|BINARY_DOUBLE|DOUBLE PRECISION|N/A|
 
 **3. 日期类型**
 
