--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -8,10 +8,12 @@
 
 **1. 字符类型**
 
-CHAR [(size [BYTE | CHAR])]
-VARCHAR2(size [BYTE | CHAR])
-NCHAR[(size)]
-NVARCHAR2(size)
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
+|CHAR [(size [BYTE | CHAR])]|-|-|
+|VARCHAR2(size [BYTE | CHAR])|-|-|
+|NCHAR[(size)]|-|-|
+|NVARCHAR2(size)|-|-|
 
 **2. 数值类型**
 
