--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -10,8 +10,8 @@
 
 |Oracle|PPAS|PPAS底层存储类型|
 |:-:|-|-|
-|CHAR [(size [BYTE | CHAR])]|-|-|
-|VARCHAR2(size [BYTE | CHAR])|-|-|
+|CHAR [(size [BYTE \| CHAR])]|-|-|
+|VARCHAR2(size [BYTE \| CHAR])|-|-|
 |NCHAR[(size)]|-|-|
 |NVARCHAR2(size)|-|-|
 
